# GildedRose

./: .gitignore  CMakeLists.txt  GildedRose.cc  GildedRose.h  GildedRoseTextTests.cc  GildedRoseUnitTests.cc  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  Output.rtf
